--- a/0308039v1/0308039v1.tex
+++ b/0308039v1/0308039v1.tex
@@ -9,7 +9,7 @@
 %%% From v1.3: \rm in \lastpart; write root of multi-part tag to .tgs 
  
 %See file texdefs.doc for documentation.
- 
+
 \catcode`\X=12\catcode`\@=11
  
 %Minor control sequences:
@@ -199,10 +199,18 @@
 \loadbold
 %UNCOMMENT NEXT 3 LINES BEFORE PRINTING
 \magnification=\magstep1
-\hcorrection{-.1in}
-\vcorrection{.05in}
-\pagewidth{6.5truein}
+\hcorrection{.1in}
+\vcorrection{-.3in}
+\headlinespace=24pt
+\dropfoliodepth=2.5pc
+\footline={\centerline{\eightrm\folio}} 
+%\pagewidth{6.5truein}
 \pageheight{8.92truein}
+\pdfpagewidth=8.5truein
+\pdfpageheight=11truein
+
+\leftheadtext{}
+\rightheadtext{}
 
 \localtags
 \TagsOnRight
@@ -215,7 +223,8 @@
 \define\retag#1{\no\rtag{#1}}
 \define\recite#1{~\cite{\bf {\rcite{#1}}}}
 \define\eq#1{~\thetag{\ecite{#1}}}
- 
+\def\rrcite#1{{\bf {\rcite{#1}}}}
+
 %\define\definition{\proclaim{Definition}}
 %\define\enddefinition{\endproclaim}
 %\define\theorem#1{\proclaim{Theorem \stag{#1}}}
@@ -378,8 +387,8 @@ November\or December\fi\space\number\day, \number\year}
 \redefine\M{\Cal M}
 %\define\quote#1{{\par\openup-1\jot
 %\narrower\smallskip\noindent{#1}\smallskip\openup1\jot \noindent}}
-\define\quote#1{{\par\openup-1\jot\smallskip\vskip1\jot\tenpoint
-\narrower\narrower\noindent{#1}\smallskip\openup1\jot}}
+\define\quote#1{{\par\smallskip\vskip1\jot\tenpoint
+\narrower\narrower\noindent{#1}\smallskip\smallskip}}
 \define\te{thermodynamic equilibrium} 
 \define\Te{Thermodynamic equilibrium}
 \newcount\rk
@@ -455,13 +464,15 @@ Universit\`a di Genova, INFN, 16146 Genova, Italy.}
 %11.random points
 
 \document
+
 \resetall\heading\sect{Introduction}\endheading
 
-\openup2\jot
-\block\openup-2\jot I am, in fact, rather firmly convinced that the essentially statistical
+\openup.25\jot
+\quote{I am, in fact, rather firmly convinced that the essentially statistical
 character of contemporary quantum theory is solely to be ascribed to the
 fact that this (theory) operates with an incomplete description of physical
-systems. (Einstein, in ref.\,50, p. 666)\endblock\indent
+systems. (Einstein, in ref.\,50, p. 666)}
+
 %
 What is randomness? probability? certainty? knowledge? These are old and
 difficult questions, and we shall not focus on them here.
@@ -498,7 +509,7 @@ hidden variables, are impossible, that as a matter of mathematics,
 averaging over ignorance cannot reproduce statistics compatible with the
 predictions of the \qf.  And this claim is even now not uncommon, despite
 the fact that a widely discussed counterexample, the \qt\ of David
-Bohm~[\rcite{Bohm1},\rcite{Bohm2}], has existed for almost four
+Bohm~[\rrcite{Bohm1},\rrcite{Bohm2}], has existed for almost four
 decades.\footnote{For an analysis of why von Neumann's and related
 ``impossibility proofs'' are not nearly so physically relevant as
 frequently imagined, see Bell's article\recite{Bellrmp}. (See also the
@@ -515,7 +526,7 @@ Moreover, while its {\it formulation\/} does not involve the notion of
 quantum observables, as given by self-adjoint operators---so that its
 relationship to the \qf\ may at first appear somewhat obscure---it can in
 fact be shown that \qb\ not only accounts for quantum
-phenomena~[\rcite{Bohm2},\rcite{Bohm3},\rcite{Bohm84}], but also embodies
+phenomena~[\rrcite{Bohm2},\rrcite{Bohm3},\rrcite{Bohm84}], but also embodies
 the
 \qf\ itself as the very expression of its empirical import\recite{op
 paper}. (The analysis in the present paper establishes agreement between
@@ -577,14 +588,14 @@ the meaninglessness of particle trajectories, we find that, with
 clean and simple consequence of the existence of trajectories. Thus quantum
 uncertainty, regarded as an experimental fact, is {\it explained\/} by \qb,
 rather than {\it explained away\/} as it is in orthodox quantum theory.
-\bigpagebreak
+%\bigpagebreak
 
 Our analysis covers all of nonrelativistic \qm. However, since our concern
 here is mainly conceptual, we shall for concreteness and simplicity
 consider only particles without spin, and shall ignore indistinguishability
 and the exclusion principle. Spin and permutation symmetry arise naturally
-in \qb~[\rcite{Bellrmp},\rcite{der paper},\rcite{Bohm1},\rcite{Quantum
-Fluct},\rcite{SGJSP}], and an analysis {\it explicitly\/} taking them into
+in \qb~[\rrcite{Bellrmp},\rrcite{der paper},\rrcite{Bohm1},\rrcite{Quantum
+Fluct},\rrcite{SGJSP}], and an analysis {\it explicitly\/} taking them into
 account would differ from the one given here in no essential way.
 
 In fact, our analysis really depends only on rather general qualitative
@@ -596,7 +607,7 @@ ontology, for example, would do just as well.
 Our analysis is, however, fundamentally nonrelativistic. It may well be the
 case that a fully relativistic generalization of the kind of physics
 explored here requires new
-concepts~[\rcite{Ascona},\rcite{Bellj},\rcite{Bohm75},\rcite{Stapp}]---if
+concepts~[\rrcite{Ascona},\rrcite{Bellj},\rrcite{Bohm75},\rrcite{Stapp}]---if
 not new mathematical structures. But if one has not first understood the
 nonrelativistic case, one could hardly know where to begin for the
 relativistic one.
@@ -604,10 +615,10 @@ relativistic one.
 Perhaps this paper should be read in the following spirit: In order to
 grasp the essence of Quantum Theory, one must first completely understand
 {\it at least one\/} \qt.
-\newline\newline
 
 \resetall\heading\sect{Reality and the role of the \wf}\endheading
-\block\openup-2\jot \indent For each measurement one is required to ascribe to the
+
+\quote{For each measurement one is required to ascribe to the
 $\psi$-function a characteristic, quite sudden change, which {\it depends
 on the measurement result obtained,\/} and so {\it cannot be forseen;\/}
 from which alone it is already quite clear that this second kind of change
@@ -618,8 +629,8 @@ measurement...is the most interesting point of the entire theory....For
 place of...the physical thing...because in the realism point of view
 observation is a natural process like any other and cannot {\it per se\/}
 bring about an interruption of the orderly flow of natural events.
-(\Sc\recite{cat paper})\endblock\indent
-%
+(\Sc\recite{cat paper})}
+
 The conventional wisdom that the \wf\ provides a complete description of a
 quantum system is certainly an attractive possibility: other things being
 equal, monism---the view that there is but one kind of reality---is perhaps
@@ -674,7 +685,7 @@ essentially by fiat. Nonetheless this theory should be commended for its
 precision, and for the light it sheds on the relationship between Lorentz
 invariance and nonlocality (see\recite{Bellj}).
 
-A related, but more serious, objection to proposals for the modification of
+A related, but more serious, objection to proposals for the modification of\break
 \Sc's equation is the following: The quantum evolution embodies a deep
 mathematical beauty, which proclaims ``Do not tamper! Don't degrade my
 integrity!'' Thus, in view of the fact that (the relativistic extension of)
@@ -722,7 +733,7 @@ particles in a manner which he only later, in the late 1920's, made
 explicit\recite{dB2}. However, under an onslaught of criticism by Pauli, he
 soon abandoned his pilot wave theory, only to return to it more than two
 decades later, after his ideas had been rediscovered, extended, and vastly
-refined by David Bohm~[\rcite{Bohm1},\rcite{Bohm2}].
+refined by David Bohm~[\rrcite{Bohm1},\rrcite{Bohm2}].
 
 Moreover, in a paper written shortly after \Sc\ invented wave mechanics,
 Born too explored the hypothesis that the \wf\ might be a ``guiding
@@ -741,7 +752,7 @@ trajectories.
 The Copenhagen interpretation of \qm\ can itself be regarded as giving the
 \wf\ a role in the behavior of something else, namely of certain macroscopic
 objects, called ``measurement instruments,'' during ``quantum
-measurements''~[\rcite{Bohmqt},\rcite{LL}]. Indeed, the most modest
+measurements''~[\rrcite{Bohmqt},\rrcite{LL}]. Indeed, the most modest
 attitude one could adopt towards
 \qt\ would appear to be that of regarding it as a phenomenological
 formalism, roughly analogous to the thermodynamic formalism, for the
@@ -806,16 +817,16 @@ from which to form configurations, how can we make sense of a field on the
 configurations?''\/} (And the \wf\ really is on configuration space---it is
 in this representation that \qm\ assumes its simplest form!)})
 \newline\newline
-  
 
 \resetall\heading\sect{\Qb}\endheading
 
-\block\openup-2\jot ...in physics the only observations we must consider are position
+\quote{...in physics the only observations we must consider are position
 observations, if only the positions of instrument pointers. It is a great
 merit of the de Broglie-Bohm picture to force us to consider this fact. If you
 make axioms, rather than definitions and theorems, about the `measurement'
 of anything else, then you commit redundancy and risk
-inconsistency. (Bell\recite{Bellpw}) \endblock\indent
+inconsistency. (Bell\recite{Bellpw})}
+
 %
 Consider a quantum system of $N$ particles, with masses $\ovec m,N$ and
 position coordinates $\ovec \bold q,N$, whose \wf\ $\psi=\psi(\ovec \bold
@@ -1086,11 +1097,12 @@ measurement.}
 
 \resetall\heading\sect{The problem of \qe}\endheading
 
-\block\openup-2\jot Then for instantaneous macroscopic configurations the pilot-wave
+\quote{Then for instantaneous macroscopic configurations the pilot-wave
 theory gives the same distribution as the orthodox theory, insofar as the
 latter is unambiguous. However, this question arises: what is the good of
 {\it either\/} theory, giving distributions over a hypothetical ensemble
-(of worlds!) when we have only one world. (Bell\recite{Bellqmcosm})\endblock\indent
+(of worlds!) when we have only one world. (Bell\recite{Bellqmcosm})}
+
 %
 Suppose a system has \wf\ $\psi$. We shall call the probability distribution
 on configuration space given by $\born$ the {\bf \qe\/} distribution. And we
@@ -1275,10 +1287,11 @@ absolute uncertainty\/}.
 
 \resetall\heading\sect{The effective \wf}\endheading
 
-\block\openup-2\jot {\it No one can understand this theory until he is willing to think
+\quote{{\it No one can understand this theory until he is willing to think
 of $\psi$ as a real objective field rather than just a `probability
 amplitude.' Even though it propagates not in $3$-space but in
-$3N$-space.} (Bell\recite{Bellqmcosm})\endblock\indent
+$3N$-space.} (Bell\recite{Bellqmcosm})}
+
 %
 We now commence our more detailed analysis of the behavior of an
 $N$-particle non-relativistic universe governed by Bohmian mechanics,
@@ -1451,7 +1464,7 @@ hence the approximate validity of \eq{vrestr}, to persist for a
 ``substantial'' amount of time.
 
 Finally, we note that according to orthodox quantum measurement
-theory~[\rcite{vN},\rcite{Bohmqt},\rcite{Wignermeas},\rcite{Wignerint}],
+theory~[\rrcite{vN}, \rrcite{Bohmqt}, \rrcite{Wignermeas},\rrcite{Wignerint}],
 after a measurement, or preparation, has been performed on a quantum
 system, the
 \wf\ for the composite formed by system and apparatus is of the form
@@ -1571,7 +1584,7 @@ well as $\Psi$! (In particular, the effective---or conditional---\wf\ is
 Relative State interpretation of quantum theory\recite{MW} is merely {\it
 relative.\/}\footnote{For an incisive critique of the Many-Worlds
 interpretation, as well as a detailed comparison with \qb, see
-Bell~[\rcite{Bellepw},\rcite{Bellqmcosm}].}) Note also that the conditional
+Bell~[\rrcite{Bellepw},\rrcite{Bellqmcosm}].}) Note also that the conditional
 \wf\ is the function of $x$ most naturally arising from $\Psi$ and
 $Y$.\footnote{For particles with spin our definition \eq{ewfa}, \eq{ewfb}
 needs no essential modification.  However, \eq{wf} would have to be
@@ -1708,7 +1721,7 @@ We shall henceforth often say ``\wf'' instead of ``effective \wf.''
 \resetall\heading\sect{The fundamental conditional probability
 formula}\endheading 
 
-\block\openup-2\jot\indent The intellectual attractiveness of a mathematical argument,
+\quote{The intellectual attractiveness of a mathematical argument,
 as well as the considerable mental labor involved in following it, makes
 mathematics a powerful tool of intellectual prestidigitation---a glittering
 deception in which some are entrapped, and some, alas, entrappers. Thus,
@@ -1717,7 +1730,7 @@ created the general impression that it must play a central role in the
 foundations of statistical mechanics.... The Birkhoff theorem does us the
 service of establishing its own inability to be more than a questionably
 relevant superstructure upon [the] hypothesis [of absolute
-continuity]. (Schwartz\recite{Schwartz})\endblock\indent
+continuity]. (Schwartz\recite{Schwartz})}
 %
 We are ready to begin the detailed analysis of the \qeh\ \eq{born}. We
 shall find that by employing, purely as a mathematical device, the \qe\
@@ -1809,13 +1822,14 @@ valid.}
 
 \resetall\heading\sect{Empirical distributions}\endheading 
 
-\block\openup-2\jot ...a single configuration of the world will show statistical
+\quote{...a single configuration of the world will show statistical
 distributions over its different parts. Suppose, for example, this world
 contains an actual ensemble of similar experimental set-ups....it follows
 from the theory that the `typical' world will approximately realize quantum
 mechanical distributions over such approximately independent components.
 The role of the hypothetical ensemble is precisely to permit definition of
-the word `typical.' (Bell\recite{Bellqmcosm})\endblock\indent
+the word `typical.' (Bell\recite{Bellqmcosm})}
+
 %
 In this section we present the simplest application of \eq{cp}, to the
 empirical distribution on configurations arising from a large collection of
@@ -2323,12 +2337,13 @@ to which \eq{rscp} then becomes a strong Markov property.}
 
 \resetall\heading\sect{Multitime distributions}\endheading 
 
-\block\openup-2\jot ...every atomic phenomenon is closed in the sense that its
+\quote{...every atomic phenomenon is closed in the sense that its
 observation is based on registrations obtained by means of suitable
 amplification devices with irreversible functioning such as, for example,
 permanent marks on the photographic plate...the quantum-mechanical
 formalism permits well-defined applications only to such closed
-phenomena... (Bohr, ref.\,22, pp. 73 and 90)\endblock\indent
+phenomena... (Bohr, ref.\,22, pp. 73 and 90)}
+
 %
 Now consider a sequence $\sigma_i=(\pi_i,T_i)$, $i=1,\dots,M$, of random
 systems, ordered so that (with probability $1$)
@@ -2463,7 +2478,7 @@ $X_i$, it follows that the $Z_i$ are independent, and, as in the last
 paragraph of Section 3, that each $Z_i$ must have the distribution provided
 by the \qf, namely, that given by the spectral measure $\r_{\hat
 Z_i}^{\psi_i}(dz)$ for $\hat Z_i$ in the state $\psi_i$. (For a detailed
-account of how this comes about see~[\rcite{Bohm2},\rcite{Bohm84},\rcite{op
+account of how this comes about see~[\rrcite{Bohm2},\rrcite{Bohm84},\rrcite{op
 paper}].)
 
 The corresponding result for the multitime case does not, in fact, follow
@@ -2680,7 +2695,7 @@ its own right, something ``real,'' and not merely knowledge that the
 configuration has distribution $\psisq$. 
 
 Moreover, the {\it detailed\/} character of this dynamical aspect is such
-that a \wf\ with narrow support quickly spreads, owing to the dispersion in
+that a \wf\ with narrow support quickly spreads, owing to the dispersion in\break
 \Sc's equation, to one with broad support, a change which generates a
 similar change in the distribution of the configuration. It follows that
 the unavoidable price we must pay for sharp knowledge of the present
@@ -2690,7 +2705,7 @@ absolute uncertainty embodies absolute unpredictability.  More generally,
 the usual uncertainty relations for noncommuting ``observables'' become a
 corollary of the \qeh\ $\born$ as soon as the dynamical role of the \wf\ is
 taken into account; a detailed analysis can be found
-in~[\rcite{Bohm2},\rcite{Bohm84},\rcite{op paper}].
+in~[\rrcite{Bohm2},\rrcite{Bohm84},\rrcite{op paper}].
 \newline\newline
 
 \resetall\heading\sect{Knowledge and nonequilibrium}\endheading 
@@ -2750,10 +2765,11 @@ of observations. But for this {\it nonequilibrium\/} is essential.
 
 \resetall\heading\sect{\Qe\ and thermodynamic (non)equilibrium}\endheading
 
-\block\openup-2\jot [In] a complete physical description, the statistical quantum theory
-would...take an approximately analogous position to the statistical
+\quote{[In] a complete physical description, the statistical quantum theory
+would ... take an approximately analogous position to the statistical
 mechanics within the framework of classical mechanics. (Einstein, in
-ref.\,50, p.672)\endblock\indent
+ref.\,50, p.672)}
+
 %
 We would like now to place \qe\ within a broader context by comparing it
 with classical thermodynamic equilibrium. 
@@ -2788,7 +2804,7 @@ environment.\/} (How otherwise would we know the temperature?) Furthermore,
 for a rigorous analysis of equilibrium distributions in the thermodynamic
 limit---i.e., of (the idealization given by) global thermodynamic
 equilibrium---the equations of Dobrushin and
-Lanford-Ruelle~[\rcite{D},\rcite{LR}], stipulating that
+Lanford-Ruelle~[\rrcite{D},\rrcite{LR}], stipulating that
 \eq{Gibbs}---regarded as expressing such a conditional distribution---be
 satisfied for all subsystems, often play a defining role.\footnote{However,
 for a universe which, like ours, is not in global thermodynamic
@@ -2833,7 +2849,7 @@ best regarded as inhabiting (mainly) the microscopic level, at least for
 The second arrow of \eq{ts} is, of course, associated primarily with the
 work of J. Willard Gibbs\recite{Gibbs}; the corresponding arrow of \eq{qs},
 upon which we have not focused here, will be the subject of\recite{op
-paper}. (See also~[\rcite{Bohm2},\rcite{Bohm84}].) We have here
+paper}. (See also~[\rrcite{Bohm2},\rrcite{Bohm84}].) We have here
 focused on the first arrow of \eq{qs}, i.e., on deriving the \qeh\ from
 \qb. The corresponding arrow of \eq{ts} remains an active area of research,
 though it does not appear likely that a comprehensive rigorous analysis
@@ -2912,9 +2928,10 @@ of the workings of the various possible devices.
 
 \resetall\heading\sect{Global equilibrium beneath nonequilibrium}\endheading
 
-\block\openup-2\jot But to admit things not visible to the gross creatures that we are
+\quote{But to admit things not visible to the gross creatures that we are
 is, in my opinion, to show a decent humility, and not just a lamentable
-addiction to metaphysics. (Bell\recite{Bellj})\endblock\indent
+addiction to metaphysics. (Bell\recite{Bellj})}
+
 %
 The schemes \eq{ts} and \eq{qs} refer to different universes, a classical
 universe and a quantum (Bohmian) universe. Since our universe happens to be
@@ -3038,11 +3055,12 @@ wish to emphasize, however, that {\it relative to the \wf\/}, \qb\ is
 completely {\it local\/}: the nonlocality in \qb\ derives solely from the
 nonlocality built into the structure of standard \qt, as provided by a \wf\
 on configuration space.
-\block\openup-2\jot That the guiding wave, in the general case, propagates
+
+\quote{That the guiding wave, in the general case, propagates
 not in ordinary three-space but in a multidimensional-configuration space
 is the origin of the notorious `nonlocality' of \qm. It is a merit of the
 de Broglie-Bohm version to bring this out so explicitly that it cannot be
-ignored. (Bell\recite{Belldm})\endblock
+ignored. (Bell\recite{Belldm})}
 
 \rmk A rather fortunate property of \qb\ is that the behavior of the
 parts---of subsystems---reflects that of the whole. Indeed, if this were
@@ -3072,7 +3090,7 @@ depends upon the location of the split between the ``observed'' and the
 ``observer,'' i.e., between the system of interest and the rest of the
 world, a dependence whose importance has been emphasized by
 Bohr\recite{Bohr}, by von Neumann\recite{vN}, and by a great many others,
-see for example~[\rcite{Bohmqt},\rcite{LL},\rcite{LB}].  In
+see for example~[\rrcite{Bohmqt},\rrcite{LL},\rrcite{LB}].  In
 particular, while the effective
 \wf\ will ``collapse'' during measurement if the apparatus is {\it not\/}
 included in the system, it need not, in principle, collapse if the
@@ -3126,7 +3144,7 @@ uncertainty and the uncertainty principle which it entails.
 
 \rmk The notion of effective \wf\ developed in Section 5 should perhaps be
 compared with a related notion of Bohm, namely, the ``active'' piece of the
-\wf\ ~[\rcite{Bohm87},\rcite{Bohmnewbook}] (see also
+\wf\ ~[\rrcite{Bohm87},\rrcite{Bohmnewbook}] (see also
 Bohm\recite{Bohm1}): If $\Psi$ is of the form
 \eq{Psum} with the supports of $\Psi^{(1)}$ and $\Psi^{(2)}$ ``sufficiently
 disjoint,'' then $\Psi^{(i)}$ is ``active'' if the actual configuration $Q$
@@ -3354,8 +3372,8 @@ renders it at all possible. We have argued that the latter problem is
 perhaps far more difficult than the former, and, indeed, that this is not
 terribly astonishing.
 
-\rmk In view of the similarity between \qb\ and stochastic mechanics [\rcite{Nelson Phys Rev},\rcite{Nelsonbm},\rcite{Quantum Fluct}], for
-which similarity see~[\rcite{SGJSP},\rcite{Ascona}], all of our arguments
+\rmk In view of the similarity between \qb\ and stochastic mechanics [\rrcite{Nelson Phys Rev},\rrcite{Nelsonbm},\rrcite{Quantum Fluct}], for
+which similarity see~[\rrcite{SGJSP},\rrcite{Ascona}], all of our arguments
 and results can be transferred to stochastic mechanics without significant
 modification. More important, the motivation for stochastic mechanics is
 the rather plausible suggestion that quantum randomness might originate
@@ -3403,7 +3421,7 @@ the many degrees of freedom, the amount of y-disjointness in the supports
 of $\Phi$ and $\Psi^{\perp}$ will typically tend to increase dramatically
 as time goes on, with, as in a chain reaction, more and more degrees of
 freedom participating in this disjointness
-(see~[\rcite{Bohm1},\rcite{Leggett},\rcite{Zurek},\rcite{JZ}]; see
+(see~[\rrcite{Bohm1},\rrcite{Leggett},\rrcite{Zurek},\rrcite{JZ}]; see
 also\recite{Bohmqt})).  When the effects of this dissipation or
 ``decoherence'' are taken into account, one finds that a small amount of
 y-disjointness will often tend quickly to become ``sufficient,'' indeed
@@ -3429,7 +3447,7 @@ we find that $\ovec Z,M$ have joint distribution given by the familiar
 (Wigner) formula\recite{Wignermeas} (see also\recite{vN} and\recite{ABL}).
 
 \rmk We wish to compare (what we take to be the lessons of) \qb\ with the
-approach of Gell-Mann and Hartle (GMH)~[\rcite{GMH1},\rcite{GMH2}].
+approach of Gell-Mann and Hartle (GMH)~[\rrcite{GMH1},\rrcite{GMH2}].
 Unhappy about the irreducible reference to the observer in the orthodox
 formulation of \qt, particularly insofar as cosmology is concerned, they
 propose a program to extract from the \qf\ a ``quasiclassical domain of
