--- a/0308039v1/0308039v1.tex
+++ b/0308039v1/0308039v1.tex
@@ -387,7 +387,7 @@ November\or December\fi\space\number\day, \number\year}
 \redefine\M{\Cal M}
 %\define\quote#1{{\par\openup-1\jot
 %\narrower\smallskip\noindent{#1}\smallskip\openup1\jot \noindent}}
-\define\quote#1{{\par\smallskip\vskip1\jot\tenpoint
+\define\quote#1{{\par\smallskip\vskip1\jot\eightpoint
 \narrower\narrower\noindent{#1}\smallskip\smallskip}}
 \define\te{thermodynamic equilibrium} 
 \define\Te{Thermodynamic equilibrium}
