--- a/bib.bib
+++ b/bib.bib
@@ -1,11 +1,31 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% https://bibdesk.sourceforge.io/
+%% http://bibdesk.sourceforge.net/
 
-%% Created for Peter Su at 2019-03-08 10:30:11 -0500 
+%% Created for Pete Su at 2019-03-09 07:36:44 -0500 
+
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Durr1992,
+	Abstract = {The quantum formalism is a ``measurement'' formalism-a phenomenological formalism describing certain macroscopic regularities. We argue that it can be regarded, and best be understood, as arising from Bohmian mechanics, which is what emerges from Schr{\"o}dinger's equation for a system of particles when we merely insist that ``particles'' means particles. While distinctly non-Newtonian, Bohmian mechanics is a fully deterministic theory of particles in motion, a motion choreographed by the wave function. We find that a Bohmian universe, though deterministic, evolves in such a manner that anappearance of randomness emerges, precisely as described by the quantum formalism and given, for example, by ``$\rho$ = {\textbrokenbar}$\psi${\textbrokenbar}2''. A crucial ingredient in our analysis of the origin of this randomness is the notion of the effective wave function of a subsystem, a notion of interest in its own right and of relevance to any discussion of quantum theory. When the quantum formalism is regarded as arising in this way, the paradoxes and perplexities so often associated with (nonrelativistic) quantum theory simply evaporate.},
+	Author = {D{\"u}rr, Detlef and Goldstein, Sheldon and Zangh{\'\i}, Nino},
+	Date-Added = {2019-03-09 07:36:16 -0500},
+	Date-Modified = {2019-03-09 07:36:44 -0500},
+	Day = {01},
+	Doi = {10.1007/BF01049004},
+	Issn = {1572-9613},
+	Journal = {Journal of Statistical Physics},
+	Month = {Jun},
+	Note = {\href{https://arxiv.org/abs/quant-ph/0308039v1}{arXiv:0308039v1}},
+	Number = {5},
+	Pages = {843--907},
+	Title = {Quantum equilibrium and the origin of absolute uncertainty},
+	Url = {https://doi.org/10.1007/BF01049004},
+	Volume = {67},
+	Year = {1992},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01049004}}
 
 @article{Bohm1987,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
