--- a/1207.0793/Bohm_AnnR.tex
+++ b/1207.0793/Bohm_AnnR.tex
@@ -692,7 +692,11 @@ with ``phase detector'' (iii) leads to the same phenomenon. The
 wave function of the particle and the neutron of the phase detector
 for $t>-T$ is:
  \begin{equation}
-\frac{1}{\sqrt{2}}\left(\alpha e^{-ik(z+\frac{u}{2}t)}\chi(z+ut)\Big(\chi(\tilde{z}-b)+\chi(\tilde{z})\Big )|\uparrow\rangle+\beta e^{ik(z-\frac{u}{2}t)}\chi(z-ut)\Big(\chi(\tilde{z}-b)-\chi(\tilde{z})\Big )|\downarrow\rangle\right),\label{psioutnox3}
+ \begin{split}
+\frac{1}{\sqrt{2}}\Bigl(\alpha e^{-ik(z+\frac{u}{2}t)}\chi(z+ut)\Big(\chi(\tilde{z}-b) +
+\chi(\tilde{z})\Big )|\uparrow\rangle+ \\
++ \, \beta e^{ik(z-\frac{u}{2}t)}\chi(z-ut)\Big(\chi(\tilde{z}-b)-\chi(\tilde{z})\Big )|\downarrow\rangle\Bigr),\label{psioutnox3}
+\end{split}
 \end{equation}
  The conditional wave function of the particle is either
   \begin{equation}
