the crystal goblet

--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,42 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-09 13:55:39 -0500 
+%% Created for Pete Su at 2019-03-09 15:35:36 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Vaidman1998,
+	Author = {Lev Vaidman},
+	Date-Added = {2019-03-09 15:34:47 -0500},
+	Date-Modified = {2019-03-09 15:35:36 -0500},
+	Doi = {10.1080/02698599808573600},
+	Journal = {International Studies in the Philosophy of Science},
+	Month = {Oct},
+	Note = {\href{https://arxiv.org/abs/quant-ph/9609006}{arXiv:9609006}},
+	Number = {3},
+	Pages = {245--261},
+	Publisher = {Informa {UK} Limited},
+	Title = {On schizophrenic experiences of the neutron or why we should believe in the many-worlds interpretation of quantum theory},
+	Url = {https://doi.org/10.1080/02698599808573600},
+	Volume = {12},
+	Year = {1998},
+	Bdsk-Url-1 = {https://doi.org/10.1080/02698599808573600}}
+
+@article{Vaidman:1996uf,
+	Archiveprefix = {arXiv},
+	Author = {Vaidman, Lev},
+	Date-Added = {2019-03-09 15:32:33 -0500},
+	Date-Modified = {2019-03-09 15:32:54 -0500},
+	Eprint = {quant-ph/9609006},
+	Note = {\href{https://arxiv.org/abs/quant-ph/9609006}{arXiv:9609006}},
+	Primaryclass = {quant-ph},
+	Reportnumber = {TAUP-2058-93},
+	Slaccitation = {%%CITATION = QUANT-PH/9609006;%%},
+	Title = {{On schizophrenic experiences of the neutron or why we should believe in the many worlds interpretation of quantum theory}},
+	Year = {1996}}
 
 @article{Naaman-Marom2012,
 	Abstract = {The de Broglie--Bohm interpretation of quantum mechanics assigns positions and trajectories to particles. We analyze the validity of a formula for the velocities of Bohmian particles which makes the analysis of these trajectories particularly simple. We apply it to particle detectors of four different types and show that the detectors of three of these types lead to ``surrealistic trajectories'', i.e., leave a trace where the Bohmian particle was not present.},
