--- a/0710.4345/PRIMER07.tex
+++ b/0710.4345/PRIMER07.tex
@@ -1,4 +1,21 @@
-\documentclass[12pt]{report} 
+\documentclass[12pt,oneside]{report} 
+\usepackage{mathpazo}
+\linespread{1.1}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[letterpaper, margin=1.3in]{geometry}
 \usepackage{latexsym}
 \usepackage{graphicx}
 \usepackage{epsf}
@@ -26,7 +43,7 @@
 }%
 \newcommand\Dalamb{\mathchoice\sqr68\sqr68\sqr{4.2}6\sqr{3}6}
 
-
+\sloppy
 
 %************
 %50MACROGO
@@ -119,7 +136,7 @@
 \renewcommand{\@chapapp}{}
 \chapter{#1}
 \renewcommand{\thechapter}{\arabic{chapter}}
-\renewcommand{\@chapapp}{Chapitre}
+\renewcommand{\@chapapp}{Chapter}
 }
 \catcode`\@=12
 
@@ -384,7 +401,7 @@ at the time the field was turned on with vacuum
 at subsequent times decays exponentially fast.
 
 After Hawking discovered black hole radiation~\cite{Hawk} several
-authors~\cite{Mul}, \cite{Step},\cite{BPS},\cite{PaBr0}
+authors~\cite{Mul}, \cite{Step}, \cite{BPS}, \cite{PaBr0}
  pointed out the analogy with this kind of pair production.
 Though the analogy is not strict the formalisms which
 are used to encode these two phenomena have many points in 
@@ -499,7 +516,7 @@ is the $x$
 representation of 
 a ket 
 $\ket{\Xi}$, i.e. $f_\omega (x)= \braket{x}{\Xi}$.
- Go over to dimensionless variables centered at the origin by introducing
+Go over to dimensionless variables centered at the origin by introducing
 \begin{eqnarray}
 \xi = \sqrt E \left(x + \omega/E \right) \label{2.3}
 \end{eqnarray}
@@ -639,10 +656,10 @@ $v$-representation of $\ket{\Xi}$ is \begin{eqnarray}
          \langle u | \Xi\rangle \/ du \nonumber \\
 &=& \int^{+\infty}_{0}\frac {e^{ivu}}{\sqrt{2\pi}}
        \frac { u^{i \varepsilon - 1/2}}{\sqrt{2\pi}} \/du \nonumber \\
-& = &\ e^{i\pi/4}e^{-\varepsilon\pi/2}\frac{ \Gamma(1/2+i\varepsilon)}{\sqrt{2\pi}}
-\\Bigl[ \theta(v) { v^{-i \varepsilon - 1/2}\over
-\sqrt{2\pi}} \Bigr] \nonumber  \\
-& & +e^{-i\pi/4}e^{\varepsilon\pi/2}
+& = & e^{i\pi/4}e^{-\varepsilon\pi/2}\frac{ \Gamma(1/2+i\varepsilon)}{\sqrt{2\pi}}
+\Bigl[ \theta(v) { v^{-i \varepsilon - 1/2}\over
+\sqrt{2\pi}} \Bigr] \nonumber  + \\
+& & e^{-i\pi/4}e^{\varepsilon\pi/2}
 \frac{ \Gamma(1/2+i\varepsilon)}{\sqrt{2\pi}}
 \Bigl[ \theta(-v) {(-v)^{-i \varepsilon - 1/2} \over
 \sqrt{2\pi}} \Bigr]
@@ -2688,7 +2705,7 @@ M^n)]$.
 2) $a e^{- a \tau / 2}  < \omega < a e^{a \tau / 2} $.
 Then the first $\gamma$ function in eq.~(\ref{jazz01}) is given
 by eq.~(\ref{jazz04}) and the second by eq.~(\ref{jazz05}, hence
-their difference is $\Gamma(i \Delta M /a)+ O[a\/e^{-\pi \Delta M/2a}/T^{n-1}
+their difference is $\Gamma(i \Delta M /a) + \break O[a\/e^{-\pi \Delta M/2a}/T^{n-1}
 \Delta M^n]$
 and $\bar A_+(\omega , \tau)$ is given by eq.~(\ref{extrab}) as announced.
 
@@ -3564,7 +3581,7 @@ c_{k^\p}^*
 \label{To}
 \end{equation}
 To calculate the energy of the particle we shall take a
-gaussian packet $c_k = e^{-ik U_0} e^{-\Delta^2
+gaussian packet \break $c_k = e^{-ik U_0} e^{-\Delta^2
 (k-k_0)^2/2}$ where the phase factor $e^{-ik U_0}$ locates the
 produced particle around $U=U_0$, its energy being
 approximatively $k_0$. Then one verifies by saddle point
@@ -3705,7 +3722,7 @@ $\int_{-\infty}^0\!dV\  \vert a V \vert\langle T_{VV} \rangle_{\psi}\simeq k_0$
 $\theta(-V)
 \langle T_{VV} \rangle_{\psi}$ is not positive definite and
 contains strong negative oscillations for small values of $V$. When
-evaluating 
+evaluating \break
 $\int_{-\infty}^0\!dV\ 
 (- a V ) \langle T_{VV} \rangle_{\psi}$ (or upon
 reflection, $\int_{-\infty}^{+\infty} dU \langle
@@ -4397,7 +4414,7 @@ in Section \ref{weakacc} to put them on exhibition (see
 Fig.~(\ref{excit})).
 
 It is now clear how eq.~(\ref{fourtwo}) makes sense. The total contribution to 
-$\int_{-\infty}^{+\infty} \! dU \ \elematrice{\psi_-} { T_{UU} }{\psi_-}$
+$\int_{-\infty}^{+\infty} \! dU \break \elematrice{\psi_-} { T_{UU} }{\psi_-}$
 is from the $\Pi_+$ contribution only
 and hence can be expressed as coming
 almost entirely from
@@ -4578,7 +4595,7 @@ not yet occurred, we necessarily have \begin{eqnarray}
 0\label{wonetwo}
 \end{eqnarray}
 because  the operator $\int_{-\infty}^{+\infty} dU T_{UU}$ annihilates  
-Minkowski vacuum.  Hence $\langle T_{UU}({\cal{I^-}})
+Minkowski vacuum.  Hence \break $\langle T_{UU}({\cal{I^-}})
 \rangle_{w+}$
  carries no integrated energy as behooves a vacuum fluctuation
 (see eqs.~(\ref{vanish}) and (\ref{vanishB})).
@@ -4812,9 +4829,7 @@ lines have been represented.}
 
 For the collapsing black hole the outside space is confined to two of
 these quadrants R  and
-F (see Fig.~(\ref{collapse})).
-
- \noindent Whereas Kruskal coordinates can
+F (see Fig.~(\ref{collapse})). Whereas Kruskal coordinates can
 be used to describe both of them, the equations  which relate $t$ and $r$ to $U$ and $V$ through
 eq.~(\ref{1.3}) to eq.~(\ref{1.5}) are  good only for the quadrant R. In the F quadrant, one may
 introduce $u_F$ given by
@@ -6526,7 +6541,8 @@ In Fig (\ref{PP2})
 we have drawn an extra line which sits outside the trapped region.
 This line designates the locus where $\langle
 T_{uu}(r,u) \rangle$ reaches half of its asymptotic
-value ($\langle T_{uu}(\infty,u)) \rangle$). 
+value\break
+ ($\langle T_{uu}(\infty,u)) \rangle$). 
 Being well outside the trapped region, this proves that the flux 
 is concerned with the external geometry only and is characterized
 by the time dependent mass $M(u)$ and not by 
@@ -7686,7 +7702,7 @@ So it should be possible to come to grips with this problem somewhere in the
 middle region. It is not impossible that one will be able to prove that the
 Hawking radiation develops out of this Planckian nether nether land and that
 the true transplanckian fluctuations are irrelevant
-\footnote{In a recent numerical calculation in a model which is analogous to the black hole, Unruh \cite{xxx} has shown that a severe modification of the dispersion relation $\omega(k)$ for $k$ greater than some threshold value in no way affects the thermal spectrum of Hawking emission.}. After all these latter
+\footnote{In a recent numerical calculation in a model which is analogous to the black hole, Unruh \cite{Unru3} has shown that a severe modification of the dispersion relation $\omega(k)$ for $k$ greater than some threshold value in no way affects the thermal spectrum of Hawking emission.}. After all these latter
 don't seem to bother us very much here and now so there is some hope that they
 are no nuisance there either. They may even result, as suggested above, in a
 Planckian spread of the region between the apparent and real horizon since they
@@ -8709,10 +8725,7 @@ _{\star}^3} \right)^2 T^4 \; d \Omega^2 \nonumber
 \feq
 \noindent where M is the mass of the star, and $  X =
 X_{\star}$ the equation of motion of its surface. (The value of
-$  X_{\star}$ fixes the density in the star). 
-
-
-The figures (\ref{fluxinf}) and (\ref{fluxsurf}) show the outgoing flux  
+$  X_{\star}$ fixes the density in the star). The figures (\ref{fluxinf}) and (\ref{fluxsurf}) show the outgoing flux  
 ( times $ 24 \pi \ (2M^2)$) measured at infinity ($\Phi_{\infty}$) and
 by  a free falling observer on the surface of the star ($\Phi_{s}$).
 The fluxes are calculated using the two dimensional energy momentum 
