--- a/0808.3773/areareviewfinalxxxsubmission.tex
+++ b/0808.3773/areareviewfinalxxxsubmission.tex
@@ -1,4 +1,4 @@
-\documentclass[rmp,twocolumn,floatfix,epsfig,graphics]{revtex4} % showpacs
+\documentclass[12pt, rmp,floatfix,epsfig,graphics]{revtex4} % showpacs
 %\documentclass[twocolumn,floatfix,epsfig,graphics]{revtex4} % showpacs
 
 \usepackage{amsmath,amsfonts,amssymb,graphics,graphicx,epsfig,times,color,bbm,fancybox}
@@ -34,6 +34,20 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage{mathpazo}
+\linespread{1.05}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true
+bookmarksopen=true,bookmarksnumbered=true]{hyperref}
+\usepackage[letterpaper, margin=1.25in]{geometry}
+
 \begin{document}
 
 \title{Area laws for the entanglement entropy -- a review}
@@ -48,6 +62,7 @@ $^3\,$Institute for Mathematical Sciences, Imperial College
 London, London SW7 2PG, UK\smallskip\newline
 $^4\,$Institut f{\"u}r Theoretische Physik, University of Ulm, 89069 Ulm, Germany}
 \begin{abstract}
+\baselineskip 12pt
 Physical interactions in quantum many-body systems are typically
 local: Individual constituents interact mainly with their few 
 nearest neighbors. This locality of interactions is inherited 
